[tool.poetry]
name = "chess"
version = "0.1.0"
description = "Python implementation of Chess"
authors = ["VinCheetah <vincent.gardies@ens-lyon.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"
stockfish = "^3.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
